update yaml and fix settlement
